@@ -1,6 +1,7 @@
 1.0 "Asieoniezi"
 
 0.126 "TBA"
+ 411446 Use `Message-ID' rather than `Message-Id' when posting. (Charles)
  411447 Header pane loses selection when deleting articles (Jeff Berman)
 
 0.125 "Potzrebie"
